--- a/InterfazWebReact/src/styles/index.css
+++ b/InterfazWebReact/src/styles/index.css
@@ -14,6 +14,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  width: 100%;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  min-width: 100%;
+  min-height: 100vh;
+  width: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -21,14 +36,6 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
